--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "keywords": ["aqua-log","logger","logging","log","aqua"],
-  "author": "",
+  "author": "cyan-dev",
   "license": "MIT",
   "type": "commonjs"
 }
